--- a/files/index.html
+++ b/files/index.html
@@ -11,6 +11,7 @@
     <li><a href="http://www.EDMUNDS.com" target="_blank">EDMUNS</a></li>
     <li><a href="http://www.CARMAX.com" target="_blank">CARMAX</a></li>
 </ul>
+<a href="welcome.html" target="_blank">Welcome Page</a><br>
 <a href="https://www.google.com/">Google Search</a>
 <br><a href="https://www.cydeo.com" target="_blank">My Bootcamp</a>
 <br>
@@ -72,17 +73,21 @@
     harum in ipsam modi, natus obcaecati praesentium
     quos recusandae sint vel veniam voluptas voluptatibus.
 </p>
+<div style="background-color: aqua">
 <h2>My Third Paragraph</h2>
+    <div style="font-family: 'Comic Sans MS'">
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
     Fugit inventore mollitia quidem quos sint. Aliquid aperiam
     at dolores eum excepturi fuga minus modi
     quod similique suscipit temporibus, totam unde velit?
 </p>
-
-
+    </div>
+</div>
+<div style="background-color: cornflowerblue; font-family: 'Comic Sans MS'">
 <h1>This is h1 heading</h1>
 <h2>This is h2 heading</h2>
 <h3>This is h3 heading</h3>
+</div>
 <h4>This is h4 heading</h4>
 <h5>This is h5 heading</h5>
 <h6>This is h6 heading</h6>
