--- a/files/welcome.html
+++ b/files/welcome.html
@@ -6,6 +6,31 @@
 </head>
 <body>
 
+<h1>This is <span style="color: crimson">how</span> <span style="color: aqua">span</span> <span style="color: aquamarine">works</span></h1>
+
+<table border="1px">
+    <thead style="background-color: red">
+    <tr>
+        <th>Name</th>
+        <th>Age</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+    <td>MuddyBuddy</td>
+    <td>2y</td>
+    </tr>
+    <tr>
+        <td>Fur-dinand</td>
+        <td>3y</td>
+    </tr>
+    <tr>
+        <td>Subwoofer</td>
+        <td>6m</td>
+    </tr>
+    </tbody>
+</table>
+
 <table>
     <tr>
         <td>15</td>
