--- a/files/forms.html
+++ b/files/forms.html
@@ -2,11 +2,17 @@
 <html lang="en">
 <head>
     <title>Forms practice</title>
+
+    <link rel="stylesheet" href="css/styles.css">
+
+    <style>
+    </style>
+
 </head>
 <body>
 
 <form>
-    <p>
+    <p style="background-color: cornflowerblue">
         Username:
         <input type="text" name="username">
     </p>
