--- a/files/index.html
+++ b/files/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
+<body style="background-color: #00ffd4">
+<p style="background-color: red">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    <br>Architecto cumque eligendi error et fuga harum impedit in
+    quam quas quis? Accusamus adipisci autem consequuntur eos ipsa perferendis quibusdam quis ullam.</p>
 <p>Car reviews:</p>
 <ul>
     <li><a href="http://www.KBB.com" target="_blank">KBB</a></li>
@@ -55,8 +58,6 @@
 
 </p>
 <hr/>
-
-
 
 
 <h1>My First Paragraph</h1>
