--- a/files/forms.html
+++ b/files/forms.html
@@ -25,17 +25,17 @@
     </p>
     <textarea cols="30" rows="5" placeholder="Enter text"></textarea>
     <br/>
-    <p>Select your favorite food:</p>
+    <p class="class1">Select your favorite food:</p>
     <input type="radio" name="food" value="burger">Burger
     <input type="radio" name="food" value="kaba" checked>Kabab
     <input type="radio" name="food" value="salad" disabled>Salad
     <br>
-    <p>Pick a date:
+    <p class="class1">Pick a date:
         <input type="date">
     </p>
 <input type="datetime-local">
 
-    <p>Please upload your resume:
+    <p class="class1">Please upload your resume:
         <br>
         <input type="file">
     </p>
@@ -66,7 +66,7 @@
     </select>
 <br>
 <br>
-    <input type="button" value="Sign Up" id="sign up">
+    <input class="btn1" type="button" value="Sign Up" id="signup">
 
     <h2>Please select your favorite food!</h2>
     <input type="checkbox" name="food" value="burger">Burger
@@ -112,7 +112,7 @@
         <input type="password" name="password" placeholder="Enter password">
     </p>
 
-    <input type="submit" value="Sign Up" style="background-color: yellowgreen" onclick="alert('Thank you for Signing up!')">
+    <input  type="submit" value="Sign Up" style="background-color: yellowgreen" onclick="alert('Thank you for Signing up!')">
 
 
 </form>
